<resources>
    <string name="app_name">Mobile Learning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--Masukan-->
    <string name="et_email">Masukan Username</string>
    <string name="et_password">Password</string>
    <string name="btn_login">Masuk</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="btn_belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="register">Register</string>

    <!--error -->
    <string name="harus_diisi">Harus diisi</string>
    <string name="no_internet">Gagal Terhubung Ke Server</string>
    <string name="error_json">Gagal mendapatkan data</string>
    <string name="password_tidak_sama">Password Tidak Sama</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_quiz">QuizActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="loading">Mohon Tunggu</string>
</resources>
