<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fitsSystemWindows="true" tools:openDrawer="start">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="${relativePackage}.${activityClass}"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    android:id="@+id/iv_logo"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_username"
                        android:hint="@string/et_email"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="17sp"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_password"
                        android:hint="@string/et_password"
                        android:inputType="textPassword"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="17sp"
                        />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_login"
                    android:id="@+id/btn_login"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginTop="30dp"
                    />
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lupa_password"
                    android:background="@android:color/transparent"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="13sp"
                    android:textColor="@color/abu_abu"
                    android:id="@+id/btn_lupa_password"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                >
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/abu_abu"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_belum_punya_akun"
                    android:id="@+id/btn_register"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"
                    android:textAllCaps="false"
                    />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>